# jvm-rs

./: Cargo.toml  README.md
examples/: Main.java  test.java
jvm_core/: Cargo.toml
jvm_core/src/: byte_stream.rs  bytecode.rs  error.rs  frame.rs  instructions.rs  main.rs  rf.rs  runtime.rs  thread.rs  value.rs
jvm_macros/: Cargo.toml
jvm_macros/src/: lib.rs
